# youagent

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  README_CN.md  mcp.example.json  pyproject.toml  start-web.sh  start.sh
src/mini_worker/: __init__.py  agents.py  cli.py  config.py  env.py  llm.py  mcp.py  memory.py  observability.py  runtime.py  security.py  server.py  settings.py  tasking.py  tools.py
src/mini_worker_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
