[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-worker-agents"
version = "0.1.0"
description = "Conversation-driven tool-using agent framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mini-worker = "mini_worker.cli:main"
youagent = "mini_worker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
